fix layout break and toast message

--- a/src/components/ui/form-modal/style.scss
+++ b/src/components/ui/form-modal/style.scss
@@ -5,11 +5,11 @@
     left: 50%;
     transform: translate(-50%, -50%);
     background-color: #fff;
-    min-width: 480px;
+    // min-width: 480px;
     border: 2px solid rgba(33, 37, 41, 1);
     border-radius: 12px;
-    z-index: 9999; /* Very high z-index to escape layout contexts */
-    pointer-events: auto; /* Ensure interactions work */
+    z-index: 9999;
+    pointer-events: auto;
 
     &__overlay {
         position: fixed;
@@ -25,6 +25,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        gap: 30px;
         border-bottom: 2px solid rgba(33, 37, 41, 1);
         border-radius: 12px;
     }
